<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/pure_white"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent" >
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/plantAppBar"
        android:layout_width="match_parent"
        android:background="@color/pure_white"
        android:layout_height="wrap_content" >

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:contentScrim="@color/pure_white"
        app:collapsedTitleTextAppearance="@style/CollapseTitle"
        app:expandedTitleTextAppearance="@style/ExpandAppBar"
        app:layout_scrollFlags="scroll|exitUntilCollapsed" >

        <LinearLayout
            android:id="@+id/someContent"
            android:layout_width="match_parent"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="0.7"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <com.facebook.drawee.view.SimpleDraweeView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:viewAspectRatio="2.0"
                android:id="@+id/imgBackground"

                app:placeholderImage="@drawable/img_loading"
                app:placeholderImageScaleType="fitCenter"
                app:failureImage="@drawable/image_error"
                app:failureImageScaleType="fitCenter"
                />

        </LinearLayout>
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_collapseMode="pin"
            app:navigationIcon="@drawable/close"
            app:titleTextColor="@color/pure_black">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/rv_center_list"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent" >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            app:cardCornerRadius="4dp"
            android:layout_width="match_parent"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@color/pure_white"
            app:cardUseCompatPadding="true"
            android:layout_margin="2dp"
            android:layout_height="wrap_content" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:background="@color/pure_white"
                android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/pure_black"
                android:textStyle="bold"
                android:textSize="@dimen/textLarge"
                android:id="@+id/name_tw"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/pure_black"
                android:textStyle="bold"
                android:textSize="@dimen/textLarge"
                android:id="@+id/name_en"
                />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_gray"
                    android:layout_marginTop="12dp"
                    android:textSize="@dimen/textMedium"
                    android:text="@string/plant_alias"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="@dimen/textMedium"
                    android:textColor="@color/light_gray"
                    android:id="@+id/plants_alsoKnown"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textSize="@dimen/textMedium"
                    android:text="@string/plants_short"
                    android:textColor="@color/light_gray"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="@dimen/textMedium"
                    android:textColor="@color/light_gray"
                    android:id="@+id/plant_brief"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/textMedium"
                    android:text="@string/plants_read"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/textMedium"
                    android:id="@+id/plant_feature"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_gray"
                    android:layout_marginTop="12dp"
                    android:textSize="@dimen/textMedium"
                    android:text="@string/plants_func"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/textMedium"
                    android:id="@+id/plant_plants_func"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/textMedium"
                    android:id="@+id/plants_updated"
                    android:text="@string/plants_updated"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>



</androidx.core.widget.NestedScrollView>






</androidx.coordinatorlayout.widget.CoordinatorLayout>